@@ -60,3 +60,4 @@
 [2025-04-19 19:54:53]	No se encontró una version válida	Mas depuracion
 [2025-04-19 21:41:14]	No se encontró una version válida	Solucionado problema de Cart
 [2025-04-19 22:19:01]	No se encontró una version válida	Solo problemas de colores
+[2025-04-22 07:24:20]	No se encontró una version válida	Borrado de carrito --ok
